test: Member 컨트롤러/서비스 테스트 수정/보강